20240729_daily_arxiv_update

--- a/arxiv/2024_07_arxiv.html
+++ b/arxiv/2024_07_arxiv.html
@@ -158,6 +158,38 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12912">https://arxiv.org/abs/2407.12912</a></span> Topological Kondo semimetal and insulator in AB-stacked heterobilayer transition metal dichalcogenides (Jennifer Cano, J. H. Pixley, Andrew Millis)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13548">https://arxiv.org/abs/2407.13548</a></span> A tensorial approach to ‘altermagnetism’</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13770">https://arxiv.org/abs/2407.13770</a></span> Moir ́e Fractional Chern Insulators IV: Fluctuation-Driven Collapse of FCIs in Multi-Band Exact Diagonalization Calculations on Rhombohedral Graphene (Jiabin Yu, Jonah Herzog-Arbeitman, Yves H. Kwan, Nicolas Regnault, B. Andrei Bernevig)</p>
+<br>
+<p class="p1">20240722</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13956">https://arxiv.org/abs/2407.13956</a></span> What is the dual Ginzburg-Landau theory for holographic superconductors?</p>
+<p class="p2"><br></p>
+<p class="p1">20240723</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15097">https://arxiv.org/abs/2407.15097</a></span> Bilayer stacking A-type altermagnet: A general approach to generating two-dimensional altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.14855">https://arxiv.org/abs/2407.14855</a></span> Non-Abelian Gauge Theory for Magnons in Topologically Textured Frustrated Magnets (Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15497">https://arxiv.org/abs/2407.15497</a></span> New renormalization group study of the 3-state Potts model and related statistical models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.14583">https://arxiv.org/abs/2407.14583</a></span> Correlated Topological Mixed-Valence Insulators in Moire ́ Hetero-Bilayers (Juan Felipe Mendez-Valderrama, Sunghoon Kim, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.00719">https://arxiv.org/abs/2303.00719</a></span> Gapped boundary of (4+1)d beyond-cohomology bosonic SPT phase (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.14183">https://arxiv.org/abs/2210.14183</a></span> Quantum Critical Metals: Dynamical Planckian Scaling and Loss of Quasiparticles *** (Haoyu Hu, Lei Chen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1507.07328">https://arxiv.org/abs/1507.07328</a></span> Anomalous Hall effect and quantum criticality in geometrically frustrated heavy fermion metals *** (Silke Paschen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.14604">https://arxiv.org/abs/2407.14604</a></span> Gravitational Wave Duet by Resonating Binary Black Holes with Axion-Like Particles (Jeong Han Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20240724</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15916">https://arxiv.org/abs/2407.15916</a></span> New boundary criticality in topological phases ***** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15919">https://arxiv.org/abs/2407.15919</a></span> Lectures on the quantum phase transitions of metals ****** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15993">https://arxiv.org/abs/2407.15993</a></span> Signatures of fractionalization in the optical phonons of hyperhoneycomb Kitaev magnet β-Li2IrO3 (Natalia B. Perkins)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.16403">https://arxiv.org/abs/2407.16403</a></span> Jordan-Wigner transformation constructed for spinful fermions at S=1/2 spins in one dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.16531">https://arxiv.org/abs/2407.16531</a></span> 1-Form Symmetric Projected Entangled-Pair States</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00062">https://arxiv.org/abs/2403.00062</a></span> Strong non-linear response of strange metals ***** (Serhii Kryhin, Subir Sachdev, Pavel A. Volkov)</p>
+<p class="p2"><br></p>
+<p class="p1">20240725</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.17091">https://arxiv.org/abs/2407.17091</a></span> Mesoscale Field Theory for Quasicrystals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.17041">https://arxiv.org/abs/2407.17041</a></span> The Ground State of the S = 1 Antiferromagnetic Heisenberg Chain is Topologically Nontrivial if Gapped **** (Hal Tasaki)</p>
+<p class="p2"><br></p>
+<p class="p1">20240726</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.18250">https://arxiv.org/abs/2407.18250</a></span> Yukawa-Lorentz symmetry of interacting non-Hermitian birefringent Dirac fermions *** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.18055">https://arxiv.org/abs/2407.18055</a></span> Collective quantum enhancement in critical quantum sensing</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.18156">https://arxiv.org/abs/2407.18156</a></span> Dipolar ordering transitions in many-body quantum optics: Analytical diagrammatic approach to equilibrium quantum spins</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.17567">https://arxiv.org/abs/2407.17567</a></span> Fermion-Vortex Interactions in Axion Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15919">https://arxiv.org/abs/2407.15919</a></span> Lectures on the quantum phase transitions of metals ****** (Subir Sachdev)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
