20240803_daily_arxiv_update

--- a/arxiv/2024_07_arxiv.html
+++ b/arxiv/2024_07_arxiv.html
@@ -190,6 +190,32 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.18156">https://arxiv.org/abs/2407.18156</a></span> Dipolar ordering transitions in many-body quantum optics: Analytical diagrammatic approach to equilibrium quantum spins</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.17567">https://arxiv.org/abs/2407.17567</a></span> Fermion-Vortex Interactions in Axion Electrodynamics</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15919">https://arxiv.org/abs/2407.15919</a></span> Lectures on the quantum phase transitions of metals ****** (Subir Sachdev)</p>
+<br>
+<p class="p1">20240729</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.18273">https://arxiv.org/abs/2407.18273</a></span> K-theory classification of Wannier localizability and detachable topological boundary states (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03784">https://arxiv.org/abs/2310.03784</a></span> Gapped Phases with Non-Invertible Symmetries: (1+1)d</p>
+<p class="p2"><br></p>
+<p class="p1">20240730</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.19003">https://arxiv.org/abs/2407.19003</a></span> Holographic dual of defect CFT with corner contributions (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20182">https://arxiv.org/abs/2407.20182</a></span> Topological Kondo semimetals emulated in hetero-bilayer transition metal dichalcogenides (Fang Xie, Lei Chen, Yuan Fang, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.19588">https://arxiv.org/abs/2407.19588</a></span> A pair of small Fermi surfaces, chiral charge-density-wave quantum criticality, and BEC-type finite-momentum pairing instabilities in TiSe2 ***** (Jin Mo Bok, B. J. Kim, Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20231">https://arxiv.org/abs/2407.20231</a></span> Fermi-surface diagnosis for s-wave-like topological superconductivity (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.19011">https://arxiv.org/abs/2407.19011</a></span> Field-induced magnon decays in dipolar quantum magnets *** (Andrew D. Kim, Ahmed Khalifa, Shubhayu Chatterjee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.00554">https://arxiv.org/abs/2404.00554</a></span> Order of the SU(Nf ) × SU(Nf ) chiral transition via the functional renormalization group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.19924">https://arxiv.org/abs/2407.19924</a></span> Combinatorial and Algebraic Mutations of Toric Fano 3-folds and Mass Deformations of 2d (0, 2) Quiver Gauge Theories (Dongwook Ghim)</p>
+<p class="p2"><br></p>
+<p class="p1">20240731</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20317">https://arxiv.org/abs/2407.20317</a></span> Lecture Notes: Many-body quantum dynamics with MCTDH-X</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20260">https://arxiv.org/abs/2407.20260</a></span> Geometrical Perspective on Spin-Lattice Density-Functional Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20504">https://arxiv.org/abs/2407.20504</a></span> Superconducting Order Parameters in Spin Space Groups: Methodology and Application ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20815">https://arxiv.org/abs/2407.20815</a></span> Jena lectures on generalized global symmetries: principles and applications *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20546">https://arxiv.org/abs/2407.20546</a></span> Fermi Machine — Quantum Many-Body Solver Derived from Correspondence between Noninteracting and Strongly Correlated Fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20733">https://arxiv.org/abs/2407.20733</a></span> Current Correlations and Conductivity in SYK-Like Systems: An Analytical Study ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20704">https://arxiv.org/abs/2407.20704</a></span> Thermal and Quantum Phase Transitions of the φ4 Model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20423">https://arxiv.org/abs/2407.20423</a></span> Supersymmetric Grassmannian Sigma Models in Gross-Neveu Formalism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20964">https://arxiv.org/abs/2407.20964</a></span> Instantons and the Large N = 4 Algebra ***** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20324">https://arxiv.org/abs/2407.20324</a></span> Wormhole Renormalization: The gravitational path integral, holography, and a gauge group for topology change *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20319">https://arxiv.org/abs/2407.20319</a></span> Open Strings and Heterotic Instantons ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
