20240819_daily_arxiv_update

--- a/arxiv/2024_08_arxiv.html
+++ b/arxiv/2024_08_arxiv.html
@@ -59,6 +59,95 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00082">https://arxiv.org/abs/2408.00082</a></span> TASI Lectures on Physics for Machine Learning ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00389">https://arxiv.org/abs/2408.00389</a></span> Effective Potential in Finite Formulation of QFT</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00628">https://arxiv.org/abs/2408.00628</a></span> Mapping from Exact RG to Holographic RG in Flat Space</p>
+<br>
+<p class="p1">20240805</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00825">https://arxiv.org/abs/2408.00825</a></span> Topological Phases of Many-Body Localized Systems: Beyond Eigenstate Order ***** (David M. Long, Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00858">https://arxiv.org/abs/2408.00858</a></span> Constructive Fermionic Matrix Product States for Projected Fermi Sea (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01281">https://arxiv.org/abs/2408.01281</a></span> Thermodynamic uncertainty relations in superconducting junctions (Kun Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01422">https://arxiv.org/abs/2408.01422</a></span> Linear response in planar Hall and thermal Hall setups for Rarita-Schwinger-Weyl semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00866">https://arxiv.org/abs/2408.00866</a></span> On the Classification of Bosonic and Fermionic One-Form Symmetries in 2 + 1d and ’t Hooft Anomaly Matching ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.00828">https://arxiv.org/abs/2408.00828</a></span> Exceptional Luttinger Liquids from sublattice dependent interaction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.03074">https://arxiv.org/abs/2308.03074</a></span> Non-Fermi Liquid Behavior of the t-J Model in the Strange Metal Phase: U(1) Gauge Theory Consistent with Local Constraints</p>
+<p class="p2"><br></p>
+<p class="p1">20240806</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01671">https://arxiv.org/abs/2408.01671</a></span> Phonon thermal Hall effect in Mott insulators via skew-scattering by the scalar spin chirality **** (Taekoo Oh, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02653">https://arxiv.org/abs/2408.02653</a></span> Importance of electron-phonon coupling near the electron-liquid to Wigner-crystal transition in two-dimensional atomically thin materials (Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01490">https://arxiv.org/abs/2408.01490</a></span> Defect Charges, Gapped Boundary Conditions, and the Symmetry TFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01492">https://arxiv.org/abs/2408.01492</a></span> Polaronic correlations from optimized ancilla wave functions for the Fermi-Hubbard model *** (Tobias Mu ̈ller, Ronny Thomale, Subir Sachdev, Yasir Iqbal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.01493">https://arxiv.org/abs/2408.01493</a></span> Strong pairing and symmetric pseudogap metal in double Kondo lattice model: from nickelate superconductor to tetralayer optical lattice ***** (Hui Yang, Hanbit Oh, Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02010">https://arxiv.org/abs/2408.02010</a></span> Tensor Network Python (TeNPy) version 1 ***** (Michael P. Zaletel, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02566">https://arxiv.org/abs/2408.02566</a></span> Magnetocaloric Effect of Topological Excitations in Kitaev Magnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02664">https://arxiv.org/abs/2408.02664</a></span> Noninvertible Gauge Symmetry in (2+1)d Topological Orders: A String-Net Model Realization (Yu Zhao, Yidun Wan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1902.07287">https://arxiv.org/abs/1902.07287</a></span> Gravitation: From Newton to Einstein *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.10816">https://arxiv.org/abs/2312.10816</a></span> Heat kernel coefficients for massive gravity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.20964">https://arxiv.org/abs/2407.20964</a></span> Instantons and the Large N = 4 Algebra (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20240807</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03112">https://arxiv.org/abs/2408.03112</a></span> Competition between Kondo Effect and RKKY Coupling *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02733">https://arxiv.org/abs/2408.02733</a></span> Quantum simulation of dynamical gauge theories in periodically driven Rydberg atom arrays (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02741">https://arxiv.org/abs/2408.02741</a></span> Floquet engineering of interactions and entanglement in periodically driven Rydberg chains (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02973">https://arxiv.org/abs/2408.02973</a></span> Comparative analysis of stationarity for Bitcoin and the S&amp;P500</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02847">https://arxiv.org/abs/2408.02847</a></span> Intertwined Superconductivity and Magnetism from Repulsive Interactions in Kondo Bilayers ***</p>
+<p class="p2"><br></p>
+<p class="p1">20240808</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03494">https://arxiv.org/abs/2408.03494</a></span> Correlation versus Dissipation in a Non-Hermitian Anderson Impurity Model (Kazuki Yamamoto, Masaya Nakagawa, Norio Kawakam)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03773">https://arxiv.org/abs/2408.03773</a></span> Fundamental physical constants set the observability and operation of phase and other transitions and increase entropy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03386">https://arxiv.org/abs/2408.03386</a></span> Carlo.jl: A general framework for Monte Carlo simulations in Julia</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03931">https://arxiv.org/abs/2408.03931</a></span> Superfluid quantum criticality and the thermal evolution of neutron stars</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1703.05575">https://arxiv.org/abs/1703.05575</a></span> Yet Another Introduction to Relativistic Astrophysics*****</p>
+<p class="p2"><br></p>
+<p class="p1">20240809</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04548">https://arxiv.org/abs/2408.04548</a></span> Nonuniversality in random criticality ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03984">https://arxiv.org/abs/2408.03984</a></span> Fractionalization as an alternate to charge ordering in electronic insulators ***** (Seth Musser, Meng Cheng, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03991">https://arxiv.org/abs/2408.03991</a></span> Berry Phases in the Bosonization of Nonlinear Edge Modes ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04416">https://arxiv.org/abs/2408.04416</a></span> Curvature-induced parity loss and hybridization of magnons: Exploring the connection of flat and tubular magnetic shells ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04436">https://arxiv.org/abs/2408.04436</a></span> Thermoelectric Transport Driven by Quantum Distance (Chang-geun Oh, Kun Woo Kim, Jun-Won Rhim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04006">https://arxiv.org/abs/2408.04006</a></span> Generalizations of Kitaev’s honeycomb model from braided fusion categories (Paul Fendley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.03999">https://arxiv.org/abs/2408.03999</a></span> Constraints on superconducting pairing in altermagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04151">https://arxiv.org/abs/2408.04151</a></span> Fermi-Liquid Theory of Non-S-Wave Superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04428">https://arxiv.org/abs/2408.04428</a></span> Localized RG flows on composite defects and C-theorem *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04592">https://arxiv.org/abs/2408.04592</a></span> A physical proof of the topological entanglement entropy inequality ***** (Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04002">https://arxiv.org/abs/2408.04002</a></span> Quantum spin liquid from electron-phonon coupling **** (Xun Cai, Zhaoyu Han, Zi-Xiang Li, Steven A. Kivelson, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15919">https://arxiv.org/abs/2407.15919</a></span> Lectures on the quantum phase transitions of metals ****** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.12969">https://arxiv.org/abs/2312.12969</a></span> Explicit form for the most general Lorentz transformation revisited (Howard E. Haber)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04089">https://arxiv.org/abs/2408.04089</a></span> Making sense of ghosts ***</p>
+<br>
+<p class="p1">20240812</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05048">https://arxiv.org/abs/2408.05048</a></span> New Field Theories with Foliation Structure and Subdimensional Particles from Godbillon-Vey Invariant</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05139">https://arxiv.org/abs/2408.05139</a></span> Fractional quantum anomalous Hall effect in rhombohedral multilayer graphene with a strong displacement field (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.04731">https://arxiv.org/abs/2408.04731</a></span> Raman tensor for two-dimensional massive Dirac fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07770">https://arxiv.org/abs/2310.07770</a></span> Approximate Quantum Codes From Long Wormholes (Brian Swingle)</p>
+<p class="p2"><br></p>
+<p class="p1">20240813</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05714">https://arxiv.org/abs/2408.05714</a></span> Quasiperiodic pairing in graphene quasicrystals (Bohm-JungYang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05359">https://arxiv.org/abs/2408.05359</a></span> Many-body Physics of Ultracold Alkaline-Earth atoms with SU(N)-symmetric interactions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.16235">https://arxiv.org/abs/2311.16235</a></span> Entanglement Properties of Gauge Theories from Higher-Form Symmetries *** (Michael Knap, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05261">https://arxiv.org/abs/2408.05261</a></span> Theory of metastable states in many-body quantum systems (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06138">https://arxiv.org/abs/2408.06138</a></span> Nonequilibrium Critical Dynamics with Emergent Supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05266">https://arxiv.org/abs/2408.05266</a></span> Gapped Phases in (2+1)d with Non-Invertible Symmetries: Part I (Lakshya Bhardwaj, Daniel Pajer, Sakura Sch ̈afer-Nameki, Apoorv Tiwari, Alison Warman, Jingxiang Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05585">https://arxiv.org/abs/2408.05585</a></span> SymTFT for (3+1)d Gapless SPTs and Obstructions to Confinement (Andrea Antinucci, Christian Copetti, Sakura Sch ̈afer-Nameki)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2408.05790">https://arxiv.org/abs/2408.05790</a><span class="s2"> Ringdown in the SYK model</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05801">https://arxiv.org/abs/2408.05801</a></span> String condensation and topological holography for 2+1D gapless SPT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05616">https://arxiv.org/abs/2408.05616</a></span> Emergence of Meron Kekul ́e lattices in twisted N ́eel antiferromagnets (Kyoung-Min Kim, Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.05277">https://arxiv.org/abs/2408.05277</a></span> Non-Fermi liquid to charge-transfer Mott insulator in flat bands of copper-doped lead apatite</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06074">https://arxiv.org/abs/2408.06074</a></span> Symmetry topological field theory and non-abelian Kramers–Wannier dualities of generalised Ising models</p>
+<p class="p2"><br></p>
+<p class="p1">20240814</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06866">https://arxiv.org/abs/2408.06866</a></span> Stable magic angle in twisted Kane-Mele materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06414">https://arxiv.org/abs/2408.06414</a></span> Improved Actions using The Renormalization Group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06953">https://arxiv.org/abs/2408.06953</a></span> Nonequilibrium control of kagome metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.06409">https://arxiv.org/abs/2408.06409</a></span> Coadjoint-orbit effective field theory of a Fermi surface in a weak magnetic field ***** (Mengxing Ye Yuxuan Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20240815</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07125">https://arxiv.org/abs/2408.07125</a></span> Emergent Gauge Fields and the “Choi-Spin Liquids” in Steady States ***** (Kaixiang Su, Yimu Bao, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07158">https://arxiv.org/abs/2408.07158</a></span> Dynamical kinetic energy quenching in the antiferromagnetic quantum critical metals **** (Anton Borissov, Vladimir Calvera, Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.04843">https://arxiv.org/abs/2403.04843</a></span> Quantum criticality under imperfect teleportation *** (Jason Alicea)</p>
+<p class="p2"><br></p>
+<p class="p1">20240816</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07750">https://arxiv.org/abs/2408.07750</a></span> Quantum Mpemba effects in many-body localization systems (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.08110">https://arxiv.org/abs/2408.08110</a></span> Semiclassical analysis of spin dynamics in the non-Hermitian Hubbard model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07968">https://arxiv.org/abs/2408.07968</a></span> Left-left-right-right magnetic order in spin-1/2 Kitaev-Heisenberg chain (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07901">https://arxiv.org/abs/2408.07901</a></span> Coupling between electrons and charge density wave fluctuation and its possible role in superconductivity (Yeongkwan Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
