20240824_daily_arxiv_update

--- a/arxiv/2024_08_arxiv.html
+++ b/arxiv/2024_08_arxiv.html
@@ -148,6 +148,43 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.08110">https://arxiv.org/abs/2408.08110</a></span> Semiclassical analysis of spin dynamics in the non-Hermitian Hubbard model</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07968">https://arxiv.org/abs/2408.07968</a></span> Left-left-right-right magnetic order in spin-1/2 Kitaev-Heisenberg chain (Ian Affleck)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.07901">https://arxiv.org/abs/2408.07901</a></span> Coupling between electrons and charge density wave fluctuation and its possible role in superconductivity (Yeongkwan Kim)</p>
+<br>
+<p class="p1">20240819</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.08364">https://arxiv.org/abs/2408.08364</a></span> Geometric expansion of fluctuations and averaged shadows (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.08804">https://arxiv.org/abs/2408.08804</a></span> Exceptional magic angles in non-Hermitian twisted bilayer graphene (Vladimir Juričić)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.08828">https://arxiv.org/abs/2408.08828</a></span> Sine–Gordon model at finite temperature: the method of random surfaces (J. H. Pixley)</p>
+<p class="p2"><br></p>
+<p class="p1">20240820</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10185">https://arxiv.org/abs/2408.10185</a></span> Superconductivity in twisted WSe2 from topology-induced quantum fluctuations (Fang Xie, Lei Chen, Shouvik Sur, Yuan Fang, Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.09956">https://arxiv.org/abs/2408.09956</a></span> Evidence of a Kondo lattice quantum critical point and of non-Fermi liquid behavior in the intercalated layered system V5S8</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10079">https://arxiv.org/abs/2408.10079</a></span> Floquet prethermalization of Z2 lattice gauge theory on superconducting qubits ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.09803">https://arxiv.org/abs/2408.09803</a></span> Non-perturbative phase boundaries in the Gross-Neveu model from a stability analysis ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05180">https://arxiv.org/abs/2208.05180</a></span> Fudan lectures on 2d conformal field theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.15919">https://arxiv.org/abs/2407.15919</a></span> Lectures on the quantum phase transitions of metals ****** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.09524">https://arxiv.org/abs/2408.09524</a></span> Enhancing Quantum Memory Lifetime with Measurement-Free Local Error Correction and Reinforcement Learning (Mincheol Park, Nishad Maskara, Marcin Kalinowski, Mikhail D. Lukin)</p>
+<p class="p2"><br></p>
+<p class="p1">20240821</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10304">https://arxiv.org/abs/2408.10304</a></span> Quantum Zeno Effect in Noisy Integrable Quantum Circuits for Impurity Models (J. H. Pixley, Natan Andrei)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10402">https://arxiv.org/abs/2408.10402</a></span> Stacking-Dependent Van Hove Singularity Shifts in Three-Dimensional Charge Density Waves of Kagome Metals AV3Sb5 (A = K, Rb, Cs) (Sun-Woo Kimb, Youngkuk Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10309">https://arxiv.org/abs/2408.10309</a></span> Incommensurate inter-valley coherent states in ABC graphene: collective modes and superconductivity (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10301">https://arxiv.org/abs/2408.10301</a></span> Quantum scars in many-body systems (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10832">https://arxiv.org/abs/2408.10832</a></span> BOUNDARY SYMMETRIES OF (2+1)D TOPOLOGICAL ORDERS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10311">https://arxiv.org/abs/2408.10311</a></span> Pfaffian quantum Monte Carlo: solution to Majorana sign ambiguity and applications (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10314">https://arxiv.org/abs/2408.10314</a></span> Entanglement entropy in lattice models with quantum metric (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13744">https://arxiv.org/abs/2304.13744</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and charged black holes ****** (Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20240822</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11265">https://arxiv.org/abs/2408.11265</a></span> Nonmonotonic Hall effect of Weyl semimetals under magnetic field (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11169">https://arxiv.org/abs/2408.11169</a></span> Electron-Electron Interactions, Magnetism, and Superconductivity: Lecture Notes for Introduction to Solid State Physics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11435">https://arxiv.org/abs/2408.11435</a></span> Encircling the Liouvillian exceptional points: a brief review ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11123">https://arxiv.org/abs/2408.11123</a></span> Notes on solvable models of many-body quantum chaos ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11818">https://arxiv.org/abs/2408.11818</a></span> Extended quantum anomalous Hall effect in moir ́e structures: phase transitions and transport ***** (Adarsh S. Patri, Zhihuan Dong, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11163">https://arxiv.org/abs/2408.11163</a></span> Tomonaga-Luttinger liquid and quantum criticality in spin-1/2 antiferromagnetic Heisenberg chain C14H18CuN4O10 via Wilson ratio</p>
+<p class="p2"><br></p>
+<p class="p1">20240823</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.12138">https://arxiv.org/abs/2408.12138</a></span> Supersymmetry breaking in SYK and the black hole spectrum</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11888">https://arxiv.org/abs/2408.11888</a></span> Doped moir ́e magnets: renormalized flat bands and excitonic phases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09388">https://arxiv.org/abs/2306.09388</a></span> A Short Introduction to Quantum Computing for Physicists *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
