20240901_daily_arxiv_news_update

--- a/arxiv/2024_08_arxiv.html
+++ b/arxiv/2024_08_arxiv.html
@@ -185,6 +185,34 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.12138">https://arxiv.org/abs/2408.12138</a></span> Supersymmetry breaking in SYK and the black hole spectrum</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11888">https://arxiv.org/abs/2408.11888</a></span> Doped moir ́e magnets: renormalized flat bands and excitonic phases</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09388">https://arxiv.org/abs/2306.09388</a></span> A Short Introduction to Quantum Computing for Physicists *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11905">https://arxiv.org/abs/2408.11905</a></span> A theory of time based on wavefunction collapse **** (Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20240826</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.12650">https://arxiv.org/abs/2408.12650</a></span> The Kondo impurity in the large spin limit *** (Max A. Metlitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.12868">https://arxiv.org/abs/2408.12868</a></span> Effective field theories of dissipative fluids with one-form symmetries (Hong Liu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.13132">https://arxiv.org/abs/2408.13132</a></span> S-Matrix Bootstrap and Non-Invertible Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09215">https://arxiv.org/abs/2307.09215</a></span> Lecture Notes on Generalized Symmetries and Applications *****</p>
+<p class="p2"><br></p>
+<p class="p1">20240827</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.10306">https://arxiv.org/abs/2408.10306</a></span> Strict area law entanglement versus chirality (Xiang Li, Ting-Chun Lin, John McGreevy, Bowen Shi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.14288">https://arxiv.org/abs/2408.14288</a></span> Dirac points and topological phases in correlated altermagnets</p>
+<p class="p2"><br></p>
+<p class="p1">20240828</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.14533">https://arxiv.org/abs/2408.14533</a></span> Obstruction to Broken Symmetries in Topological Flat Bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.14858">https://arxiv.org/abs/2408.14858</a></span> Non-Fermi liquid over extended range at zero temperature without quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05180">https://arxiv.org/abs/2208.05180</a></span> Fudan lectures on 2d conformal field theory *****</p>
+<p class="p2"><br></p>
+<p class="p1">20240829</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.15319">https://arxiv.org/abs/2408.15319</a></span> Models of interacting bosons with exact ground states: a unified approach (Zhaoyu Han, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.15315">https://arxiv.org/abs/2408.15315</a></span> A note on defect stability in d = 4 − ε</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.15323">https://arxiv.org/abs/2408.15323</a></span> Review: Quantum Metrology and Sensing with Many-Body Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.15351">https://arxiv.org/abs/2408.15351</a></span> Charge pumps, boundary modes, and the necessity of unnecessary criticality (S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.15960">https://arxiv.org/abs/2408.15960</a></span> 1+1d SPT phases with fusion category symmetry: interface modes and non-abelian Thouless pump</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14955">https://arxiv.org/abs/2306.14955</a></span> Fermi Surface Bosonization for Non-Fermi Liquids ****** (SangEun Han, F ́elix Desrochers, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20240830</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.16057">https://arxiv.org/abs/2408.16057</a></span> Corner Charge Fluctuations and Many-Body Quantum Geometry (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.16761">https://arxiv.org/abs/2408.16761</a></span> Nonlocal Moments in the Chern Bands of Twisted Bilayer Graphene ***** (Patrick J. Ledwith, Junkai Dong, Ashvin Vishwanath, Eslam Khalaf)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
